complete hero section

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- Navbar -->
     <nav class="navbar">
         <a href="#" class="navbar-logo">SASS</a>
-        <div class="navbar-bars">
-            <i class="fas fa-bars"></i>
+        <div class="navbar-bars active">
+            <i class="fas fa-bars"></i>    
         </div>
-        <ul class="navbar-menu">
-            <ul><a href="#" class="navbar-menu-links">Home</a>            </ul>
-            <ul><a href="#" class="navbar-menu-links">Products</a></ul>
-            <ul><a href="#" class="navbar-menu-links">Services</a></ul>
-            <ul><a href="#" class="navbar-menu-links" id="button">Sign Up</a></ul>
+        <ul class="navbar-menu ">
+            <li><a href="#" class="navbar-menu-links">Home</a></li>
+            <li><a href="#" class="navbar-menu-links">Products</a></li>
+            <li><a href="#" class="navbar-menu-links">Services</a></li>
+            <li><a href="#" class="navbar-menu-links" id="button">Sign Up</a></li>
         </ul>
     </nav>
 
@@ -34,5 +34,6 @@
             <img src="./images/img.svg" class="hero-container-img" alt="alien">
         </div>
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
